--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
 services:
-  marzban-node:
-    build: .
+  rebecca-node:
+    # build: .
+    image: rebeccapanel/rebecca-node:latest
     restart: always
     network_mode: host
 
+    # env_file: .env
+    environment:
+      SSL_CERT_FILE: "/var/lib/rebecca-node/ssl_cert.pem"
+      SSL_KEY_FILE: "/var/lib/rebecca-node/ssl_key.pem"
+      # SSL_CLIENT_CERT_FILE: "/var/lib/rebecca-node/ssl_client_cert.pem"
+
     volumes:
-      - /var/lib/marzban-node:/var/lib/marzban-node
+      - /var/lib/rebecca-node:/var/lib/rebecca-node
